<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>InstalledPanel</class>
 <widget class="QWidget" name="InstalledPanel">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>750</width>
    <height>600</height>
   </rect>
  </property>
  <layout class="QVBoxLayout" name="installedLayout">
   <property name="spacing">
    <number>0</number>
   </property>

   <item>
    <widget class="QScrollArea" name="installedScrollArea">
     <property name="widgetResizable">
      <bool>true</bool>
     </property>
     <widget class="QWidget" name="installedContainer">
      <property name="geometry">
       <rect>
        <x>0</x>
        <y>0</y>
        <width>782</width>
        <height>69</height>
       </rect>
      </property>
     </widget>
    </widget>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections/>
</ui>